--- a/volunteam/public/styles/style.css
+++ b/volunteam/public/styles/style.css
@@ -1,6 +1,6 @@
-body {
+/* body { */
     /* background-image: url('img_girl.jpg'); */
     /* background-repeat: no-repeat; */
     /* background-attachment: fixed; */
     /* background-size: cover;   */
-}
+/* } */
