--- a/client/src/components/CreateEventPage/createeventform.css
+++ b/client/src/components/CreateEventPage/createeventform.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     text-align: center;
     margin-top: 10px;
     max-width: 50%;
@@ -19,4 +19,4 @@
   }
   .btn {
       border-radius: 1.5rem;
-  }
+  } */
