--- a/client/src/components/mainpage/nav.css
+++ b/client/src/components/mainpage/nav.css
@@ -1,4 +1,11 @@
 
 .brand-logo { 
     align-items: left !important;
+    font-family: 'Odibee Sans', cursive;
+
 }
+
+.nav-wrapper {
+    background: #026670;
+}
+
