--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -1,10 +1,13 @@
-/* body { */
-    /* background-image: url('img_girl.jpg'); */
-    /* background-repeat: no-repeat; */
-    /* background-attachment: fixed; */
-    /* background-size: cover;   */
-/* } */
-
 body {
-    background: #edeae5;
+  background: #edeae5;
+  background-image: url(../images/wilderness_background.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+} 
+
+.container-main {
+  margin: 0 auto;
+  max-width: 90%;
+  width: 90%;
 }
