--- a/client/src/components/mainpage/searchbar.css
+++ b/client/src/components/mainpage/searchbar.css
@@ -1,5 +1,5 @@
 .input-field {
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 10px;
     border: 1px solid black;
     padding: 20px;
