final stylistic changes in myevents, event cards, and editing an event

--- a/client/src/components/ViewEvent/viewEvent.css
+++ b/client/src/components/ViewEvent/viewEvent.css
@@ -53,3 +53,7 @@
 .resp-sharing-button--twitter:hover {
   background-color: #2795e9
 }
+
+#eventname, #date, #time, #description, #address {
+  background-color: lightgoldenrodyellow
+}
